--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<P>
+    <strong>Title:</strong>
+    <%= @book.title %>
+</p>
+<P>
+    <strong>Body:</strong>
+    <%= @book.body %>
+</p>
+
+<%= link_to "edit", edit_book_path(@book.id) %>
