--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>編集画面</h1>
+<h1>Editing Book</h1>
 <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
-  <h4>タイトル</h4>
+  <h4>title</h4>
   <%= f.text_field :title %>
-  <h4>本文</h4>
+  <h4>Body</h4>
   <%= f.text_area :body %>
-  <%= f.submit '保存' %>
+  <%= f.submit 'Update Book' %>
 <% end %>
