--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,36 +1,41 @@
 <body>
     <p id="notice"></p>
     <h1>Books</h1>
-      <% @books.each do |book| %>
+
       
       <table>
         <thead>
-          <tr>
-            <th>Title</th>
-            <th>Body</th>
-            <th colspan="3"></th>
-          </tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th colspan="3"></th>
         </thead>
         
-      <span>
-        <p><%= book.title %></p>
-        <p><%= book.body %></p>
-        <%= link_to "show", book_path(book.id) %>
-      
-      </span>
-      <% end %>
-      
+        <% @books.each do |book| %>
+        <tbody>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
+          <td>
+            <%= link_to "show", book_path(book.id) %>
+            <%= link_to "edit", book_path(book.id) %>
+            <%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+          </td>
+        </tbody>
+        <% end %>
+        
       </table>
+      
+      
     <h2>New Book</h2>
     
     <%= form_with model:@book, url:'books', local:true do |f| %>
     
-      <h4>Title</h4>
-      <%= f.text_field :title %>
+      <h5>Title</h5>
+      <div class="field"><%= f.text_field :title %></div>
+     
+      <h5>Body</h5>
+      <div dlass="field"><%= f.text_area :body %></div>
       
-      <h4>Body</h4>
-      <%= f.text_area :body %>
-      <%= f.submit 'Create Book' %>
+      <div class="actions"><%= f.submit 'Create Book' %></div>
     <% end %>
     
 </body>
