--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,6 +7,7 @@
     <%= @book.body %>
 </p>
 
-<%= link_to "edit", edit_book_path(@book.id) %>
-<%= link_to "back", "/books" %>
+<%= link_to "Edit", edit_book_path(@book.id) %>
+<span>|</span>
+<%= link_to "Back", "/books" %>
 
