--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,6 +30,14 @@
       
       
     <h2>New Book</h2>
+    
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %> errors prohibited this book from being saved:
+      <% @book.errors.full_messages.each do |message| %>
+        <%= message %>
+      <% end %>
+    <% end %>
+
     <%= form_with model:@book, local:true do |f| %>
       <h5>Title</h5>
       <div class="field"><%= f.text_field :title %></div>
