Finish RSpec done

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 
-<p class="notice">Book was successfully created.</p>
+<p class="notice"><%= notice %></p>
 
 
 <P>
@@ -11,7 +11,8 @@
     <%= @book.body %>
 </p>
 
-<%= link_to "Edit", edit_book_path(@book.id) %>
-<span>|</span>
-<%= link_to "Back", "/books" %>
-
+<p>
+  <%= link_to "Edit", edit_book_path(@book.id) %>
+  <span>|</span>
+  <%= link_to "Back", "/books" %>
+ </p>
