--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,10 +6,21 @@
   <% end %>
 <% end %>
 
+<p class="notice"><%= notice %></p>
+
 <%= form_with model:@book, local:true do |f| %>
   <h4>title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
   <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
+  
+  <div>
+    <%= f.submit 'Update Book' %>
+  </div>
+  
+  <p>
+    <%= link_to "Show", book_path(@book.id) %>
+    <span>|</span>
+    <%= link_to "Back", "/books" %>
+  </p>
 <% end %>
